Criada página do Carrossel

--- a/index.html
+++ b/index.html
@@ -5,26 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/main.js"></script>
+   
+    <link rel="stylesheet" href="../css/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="../css/owl/owl.theme.default.min.css">
     <title>Document</title>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            Cabeçalho
+            Luna Luni Doces
         </div>
-        <div class="nav-bar">
-            Menu de Navegação
-        </div>
-        <div class="caroussel">
-            Exibição dos Produtos
+        <nav class="nav-bar">
+            <a href="http://">HOME</a>
+            <a href="http://">QUEM SOMOS</a>
+            <a href="http://">CONTATO E LOCALIZAÇÃO</a>
+        </nav>
+        <div class="carousel-movies">
+            <div class="owl-carousel owl-theme">
+                <div  class="item"> <img class="foto-produto" src="../images/1.jpg"></div>
+                <div  class="item"> <img class="foto-produto" src="../images/2.jpg"></div>
+                <div  class="item"> <img class="foto-produto" src="../images/3.jpg"></div>
+                <div  class="item"> <img class="foto-produto" src="../images/4.jpg"></div>
+                <div  class="item"> <img class="foto-produto" src="../images/5.jpg"></div>
+                <div  class="item"> <img class="foto-produto" src="../images/6.jpg"></div>
+                <div  class="item"> <img class="foto-produto" src="../images/7.jpg"></div>
+                <div  class="item"> <img class="foto-produto" src="../images/8.jpg"></div>
+            </div>
         </div>
         <div class="footer">
-            Luísa Baggio Costa
-            RA: 20030545-5
-            Superior de Tecnologia em Sistemas para Internet
-            Unicesumar
+            <span id="nome-aluna">Luísa Baggio Costa</span> 
+            RA: 20030545-5 - 
+            Superior de Tecnologia em Sistemas para Internet - Unicesumar
         </div>
     </div>
+    <script type="text/javascript" src="../js/owl/jquery.min.js"></script>
+    <script type="text/javascript" src="../js/owl/owl.carousel.min.js"></script>
+    <script type="text/javascript" src="../js/owl/owl-setup.js"></script> 
+
+    <script src="./js/main.js"></script>
 </body>
 </html>
